# python-user-platform

./: .env-example  .flake8  .gitignore  README.md  pyproject.toml  requirement.txt
prima-tech-challenge/: app.py
prima-tech-challenge/static/: swagger.json
prima-tech-challenge/user_management/: user_routes.py  user_service.py  utils.py
