[tool.poetry]
name = "prima-tech-challenge"
version = "1.0.0"
description = "Domain SREs Prima Tech Challenge"
authors = ["Matteo De Ponti <matteo.deponti@prima.it>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
Flask = "^2.2.3"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.10.1"
flask-swagger-ui = "^4.11.1"
pulumi-local = "^1.2.2"
awscli-local = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
